--- a/News.html
+++ b/News.html
@@ -23,38 +23,38 @@
 
 <body>
     <!-- NAVBAR -->
-        <div id="navbar">
-            <nav class="navbar navbar-fixed-top navbar-toggleable-sm transparent">
-                <button class="navbar-toggler navbar-toggler-right" id="mainNav" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+    <div id="navbar">
+        <nav class="navbar navbar-fixed-top navbar-toggleable-sm transparent">
+            <button class="navbar-toggler navbar-toggler-right" id="mainNav" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <div id="buttonDivs">
             <div class="buttonBar" id="bar1"></div>
             <div class="buttonBar" id="bar2"></div>
             <div class="buttonBar" id="bar3"></div>
           </div>
         </button>
-                <a class="navbar-brand col-md-4" href="BerkshireFinalFinal.html"><img id="logo" src="logo.png"></a>
-                <div class="collapse navbar-collapse" id="navbarText">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
-                            <a class="nav-link buttonContent" id="navHome" href="BerkshireFinalFinal.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link buttonContent" id="navNews" href="#news">News</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link buttonContent" id="navShareholder" href="Shareholder_Information.html">Shareholders</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link buttonContent" id="navBerkshire" href="berkshireinc.html">Berkshire Inc.</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link buttonContent" id="navContact" href="Contact.html">Contact</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
-        <section id="FirstSection">
+            <a class="navbar-brand col-md-4" href="BerkshireFinalFinal.html"><img id="logo" src="logo.png"></a>
+            <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link buttonContent" id="navHome" href="BerkshireFinalFinal.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link buttonContent" id="navNews" href="#news">News</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link buttonContent" id="navShareholder" href="Shareholder_Information.html">Shareholders</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link buttonContent" id="navBerkshire" href="berkshireinc.html">Berkshire Inc.</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link buttonContent" id="navContact" href="Contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+    <section id="FirstSection">
         <div id="parent">
             <div class="container" id="ShiftDown">
                 <div class="row">
@@ -97,6 +97,155 @@
                 </div>
             </div>
         </div>
+    </section>
+    <section>
+       <style>
+        /* Always set the map height explicitly to define the size of the div
+       * element that contains the map. */
+
+        #map {
+            height: 400px;
+            width: 100%;
+        }
+
+        /* Optional: Makes the sample page fill the window. */
+
+        #floating-panel {
+            position: absolute;
+            top: 10px;
+            left: 25%;
+            z-index: 5;
+            background-color: #fff;
+            padding: 5px;
+            border: 1px solid #999;
+            text-align: center;
+            font-family: 'Roboto', 'sans-serif';
+            line-height: 30px;
+            padding-left: 10px;
+        }
+
+        #warnings-panel {
+            width: 100%;
+            height: 10%;
+            text-align: center;
+        }
+
+    </style>
+        <div id="floating-panel">
+            <b>Start: </b>
+            <select id="start">
+      <option value="omaha, ne"></option>
+      <option value="penn station, new york, ny">New York</option>
+      <option value="union station, los angeles, ca">Los Angeles</option>
+      <option value="union station, chicago, il">Chicago</option>
+      <option value="union station, phoenix, az">Phoenix</option>
+      <option value="central station main, houston, tx">Houston</option>
+      <option value="san antonio, tx">San Antonio</option>
+      <option value="san diego, ca">San Diego</option>
+      <option value="dallas, tx">Dallas</option>
+      <option value="san jose, ca">San Jose</option>
+      
+    </select>
+
+            <b>End: </b>
+            <select id="end">
+      <option value="3555 Farnam St Omaha NE 68131">Berkshire Hathaway HQ</option>
+    </select>
+        </div>
+        <div id="map"></div>
+        &nbsp;
+        <div id="warnings-panel"></div>
+        <script>
+            function initMap() {
+                var markerArray = [];
+
+                // Instantiate a directions service.
+                var directionsService = new google.maps.DirectionsService;
+
+                // Create a map and center it on Berkshire Hathaway HQ.
+                var map = new google.maps.Map(document.getElementById('map'), {
+                    zoom: 10,
+                    center: {
+                        lat: 41.2572,
+                        lng: -95.9654
+                    }
+                });
+
+                // Create a renderer for directions and bind it to the map.
+                var directionsDisplay = new google.maps.DirectionsRenderer({
+                    map: map
+                });
+
+                // Instantiate an info window to hold step text.
+                var stepDisplay = new google.maps.InfoWindow;
+
+                // Display the route between the initial start and end selections.
+                calculateAndDisplayRoute(
+                    directionsDisplay, directionsService, markerArray, stepDisplay, map);
+                // Listen to change events from the start and end lists.
+                var onChangeHandler = function() {
+                    calculateAndDisplayRoute(
+                        directionsDisplay, directionsService, markerArray, stepDisplay, map);
+                };
+                document.getElementById('start').addEventListener('change', onChangeHandler);
+                document.getElementById('end').addEventListener('change', onChangeHandler);
+            }
+
+            function calculateAndDisplayRoute(directionsDisplay, directionsService,
+                markerArray, stepDisplay, map) {
+                // First, remove any existing markers from the map.
+                for (var i = 0; i < markerArray.length; i++) {
+                    markerArray[i].setMap(null);
+                }
+
+                // Retrieve the start and end locations and create a DirectionsRequest using
+                // DRIVING directions.
+                directionsService.route({
+                    origin: document.getElementById('start').value,
+                    destination: document.getElementById('end').value,
+                    travelMode: 'DRIVING'
+                }, function(response, status) {
+                    // Route the directions and pass the response to a function to create
+                    // markers for each step.
+                    if (status === 'OK') {
+                        document.getElementById('warnings-panel').innerHTML =
+                            '<b>' + response.routes[0].warnings + '</b>';
+                        directionsDisplay.setDirections(response);
+                        showSteps(response, markerArray, stepDisplay, map);
+                    } else {
+                        window.alert('Directions request failed due to ' + status);
+                    }
+                });
+            }
+
+            function showSteps(directionResult, markerArray, stepDisplay, map) {
+                // For each step, place a marker, and add the text to the marker's infowindow.
+                // Also attach the marker to an array so we can keep track of it and remove it
+                // when calculating new routes.
+                var myRoute = directionResult.routes[0].legs[0];
+                for (var i = 0; i < myRoute.steps.length; i++) {
+                    var marker = markerArray[i] = markerArray[i] || new google.maps.Marker;
+                    marker.setMap(map);
+                    marker.setPosition(myRoute.steps[i].start_location);
+                    attachInstructionText(
+                        stepDisplay, marker, myRoute.steps[i].instructions, map);
+                }
+            }
+
+            function attachInstructionText(stepDisplay, marker, text, map) {
+                google.maps.event.addListener(marker, 'click', function() {
+                    // Open an info window when the marker is clicked on, containing the text
+                    // of the step.
+                    stepDisplay.setContent(text);
+                    stepDisplay.open(map, marker);
+                });
+            }
+
+        </script>
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBY9I6jyCaTXuqxCs7ZHPddfj0lQr0Hmz8&callback=initMap">
+
+
+        </script>
     </section>
     <!-- FOOTER -->
     <footer id="footerabout" class="section">
