--- a/News.html
+++ b/News.html
@@ -14,7 +14,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBY9I6jyCaTXuqxCs7ZHPddfj0lQr0Hmz8&callback=initMap">
     </script>
-
 </head>
 
 <body>
@@ -50,8 +49,9 @@
             </div>
         </nav>
     </div>
+
     <section>
-        <div class="container">
+        <div class="container" id="container1">
             <div class="row">
                 <div id=Reports class="col-lg-4">
                     <div class="card" style="width: 20rem;">
