--- a/BerkshireFinalFinal.html
+++ b/BerkshireFinalFinal.html
@@ -81,7 +81,7 @@
       <div class="carousel-item">
         <img class="d-block" src="stock.jpg"  alt="Stock market">
           <div class="carousel-caption d-none d-md-block" id='black-caption'>
-            <h3>The company with highest stock prices</h3>
+            <h3 >The company with highest stock prices</h3>
           </div>
       </div>
     </div>
@@ -102,6 +102,33 @@
       <p id="description-header">Our profile</p>
       <p id="description">Berkshire Hathaway traces its history back to two Massachusetts textile firms: Hathaway Manufacturing Company (incorporated 1888) and Berkshire Cotton Manufacturing Company (incorporated 1889). Berkshire Cotton became Berkshire Fine Spinning Associates in 1929 and merged with Hathaway to form Berkshire Hathaway, Inc., in 1955. An investment group led by Buffett took full control of the company in 1965. Berkshire Hathaway liquidated its textile operations in 1985, by which time it was well-established as a holding company for Buffett’s other investments and corporate acquisitions.<br><br>Buffett built up Berkshire Hathaway by buying stock in undervalued companies, acquiring many of those businesses, and then allowing considerable autonomy to the managers of the subsidiaries. From the early days of his tenure, insurance companies formed a large part of the Berkshire Hathaway portfolio. National Indemnity Company and National Fire & Marine Insurance Company (now a part of National Indemnity) were both purchased in 1967, followed by GEICO in 1996 and General Reinsurance in 1998. However, the company’s acquisitions have always been quite diversified, including, for example, Scott Fetzer Company (1986), owner of reference and educational publisher World Book; Benjamin Moore, maker of paint (2000); and Fruit of the Loom (2002), manufacturer of underclothing. The purchase of the Burlington Northern Santa Fe Corporation (2010), owner of BNSF Railway, for about $44 billion in all was a bigger deal than any the company had made previously. However varied, Berkshire Hathaway subsidiaries have nearly always been drawn from established industries rather than emerging industries.
       </p>
+    </div>
+  </div>
+
+  <div class="description-text">
+    <p class="description-header"> Latest news</p>
+  </div>
+
+  <div class="container" id="top3">
+    <div class="card-deck">
+      <div class="card">
+        <img class="card-img-top" src="clock.jpg" alt="Last quarter">
+        <div class="card-body">
+          <a href="http://www.berkshirehathaway.com/news/nov0317.pdf" class="card-title">Last quarter 2017 results</a>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="message.jpg" alt="Message from us">
+        <div class="card-body">
+          <a href="http://www.berkshirehathaway.com/message.html" class="card-title">A message from us</a>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="ethics.jpg" alt="Ethics conduct">
+        <div class="card-body">
+          <a href="http://www.berkshirehathaway.com/govern/ethics.pdf" class="card-title" >New ethics and conduct</a>
+        </div>
+      </div>
     </div>
   </div>
 
