--- a/News.html
+++ b/News.html
@@ -1,6 +1,5 @@
 <!DOCTYPE HTML>
 <html lang="">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
@@ -8,15 +7,11 @@
     <!--Fonts-->
     <link rel='dns-prefetch' href='http://fonts.googleapis.com/' />
     <link rel='dns-prefetch' href='http://s.w.org/' />
-
     <!--Style Sheets-->
     <link rel="stylesheet" href="BerkshireFinalFinal.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" />
     <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Open+Sans%3A400%2C+300%2C400%2C600%2C700%2C800%26subset%3Dlatin%2Clatin-ext&amp;ver=1.8' type='text/css' media='all' />
-
-
 </head>
-
 <body>
     <!-- NAVBAR -->
     <div id="navbar">
@@ -50,100 +45,90 @@
             </div>
         </nav>
     </div>
-
-
-    <section>
-        <div class="container" id="container1">
-            <div class="row">
-                <div id=Reports class="col-lg-4">
-                    <div class="card" style="width: 20rem;">
-                        <div class="card-body">
-                            <h4 class="card-title">Annual and Interim Reports</h4>
-                            <h6 class="card-subtitle mb-2 text-muted">2017</h6>
-                            <p class="card-text">"Increased stock of Apple and Bank of New York Mellon, while reducing International Business Machines.Twenty-First Century Fox dropped."</p>
-                            <a href="http://www.berkshirehathaway.com/qtrly/links1stqtr17.html" class="card-link">1. Quarter</a>
-                            <a href="http://www.berkshirehathaway.com/qtrly/links2ndqtr17.html" class="card-link">2. Quarter</a>
-                            <a href="http://www.berkshirehathaway.com/qtrly/links3rdqtr17.html" class="card-link">3. Quarter</a>
-
-    <section id="FirstSection">
-        <div id="parent">
-            <div class="container" id="ShiftDown">
-                <div class="row">
-                    <div id=Reports class="col-lg-4">
-                        <div class="card" style="width: 20rem;">
-                            <div class="card-body">
-                                <h4 class="card-title">Annual and Interim Reports</h4>
-                                <h6 class="card-subtitle mb-2 text-muted">2017</h6>
-                                <p class="card-text">"Increased stock of Apple and Bank of New York Mellon, while reducing International Business Machines.Twenty-First Century Fox dropped."</p>
-                                <a href="http://www.berkshirehathaway.com/qtrly/links1stqtr17.html" class="card-link">1. Quarter</a>
-                                <a href="http://www.berkshirehathaway.com/qtrly/links2ndqtr17.html" class="card-link">2. Quarter</a>
-                                <a href="http://www.berkshirehathaway.com/qtrly/links3rdqtr17.html" class="card-link">3. Quarter</a>
-                            </div>
-
-                        </div>
-                    </div>
-                    <div id=AGM_Info class="col-lg-4">
-                        <div class="card" style="width: 20rem;">
-                            <div class="card-body">
-                                <h4 class="card-title">Annual General Meeting</h4>
-                                <h6 class="card-subtitle mb-2 text-muted">Info</h6>
-                                <p class="card-text">For the third year, Yahoo will webcast the May 5 meeting, going live at 9am. <a href="https://finance.yahoo.com/brklivestream">Watch the Stream Here</a></p>
-                                <a href="http://www.berkshirehathaway.com/meet01/2018Meetinginfo.pdf" class="card-link">2018</a>
-                                <a href="http://www.berkshirehathaway.com/meet01/VisGuide2017.pdf" class="card-link">2017</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div id="News_Releases" class="col-lg-4">
-                        <div class="card" style="width: 20rem;">
-                            <div class="card-body">
-                                <h4 class="card-title">News</h4>
-                                <h6 class="card-subtitle mb-2 text-muted">Past 4 Year Releases</h6>
-                                <p class="card-text">"A very impressed market has traded Apple's stock up by 45% since the beginning of the year. This has nicely lifted the value of Berkshire's stake, which according to the company's latest regulatory filing stands at over 130 million shares." - The Motley Fool</p>
-                                <a href="http://www.berkshirehathaway.com/news/2017news.html" class="card-link">2017</a>
-                                <a href="http://www.berkshirehathaway.com/news/2016news.html" class="card-link">2016</a>
-                                <a href="http://www.berkshirehathaway.com/news/2015news.html" class="card-link">2015</a>
-                                <a href="http://www.berkshirehathaway.com/news/2014news.html" class="card-link">2014</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+    <br>
+    <br>
+    <div class="description-text">
+        <p class="description-header"> LATEST NEWS</p>
+      </div>
+<br>
+<br>
+    <div class="container" id="top3">
+        <div class="card-deck">
+          <div class="card">
+            <img class="card-img-top" src="https://images.unsplash.com/photo-1423666523292-b458da343f6a?auto=format&fit=crop&w=1053&q=80&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D" alt="Last quarter">
+            <div class="card-body">
+              <a href="https://finance.yahoo.com/quote/BRK-A/news/" class="card-title">Last Quarter 2017 Results</a>
             </div>
+          </div>
+          <div class="card">
+            <img class="card-img-top" src="https://images.unsplash.com/photo-1504711434969-e33886168f5c?auto=format&fit=crop&w=1050&q=80&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D" alt="Message From Us">
+            <div class="card-body">
+              <a href="https://www.marketwatch.com/investing/stock/brk.b/news" class="card-title">Media News</a>
+            </div>
+          </div>
+          <div class="card">
+            <img class="card-img-top" src="https://images.unsplash.com/photo-1494707924465-e1426acb48cb?auto=format&fit=crop&w=1050&q=80&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D" alt="Ethics conduct">
+            <div class="card-body">
+              <a href="https://www.mckinsey.com/business-functions/organization/our-insights/teamwork-at-the-top" class="card-title" >Teamwork is Still Important</a>
+            </div>
+          </div>
         </div>
-    </section>
-<<<<<<< HEAD
-=======
-    <section>
-        <div id="floating-panel">
-            <b>Start: </b>
-            <select id="start">
-      <option value="omaha, ne"></option>
-      <option value="penn station, new york, ny">New York</option>
-      <option value="union station, los angeles, ca">Los Angeles</option>
-      <option value="union station, chicago, il">Chicago</option>
-      <option value="union station, phoenix, az">Phoenix</option>
-      <option value="central station main, houston, tx">Houston</option>
-      <option value="san antonio, tx">San Antonio</option>
-      <option value="san diego, ca">San Diego</option>
-      <option value="dallas, tx">Dallas</option>
-      <option value="san jose, ca">San Jose</option>
-
-    </select>
-
-            <b>End: </b>
-            <select id="end">
-      <option value="3555 Farnam St Omaha NE 68131">Berkshire Hathaway HQ</option>
-    </select>
+      </div>
+      <br>
+      <br>
+      <div class="container" id="top3">
+        <div class="card-deck">
+          <div class="card">
+            <img class="card-img-top" src="https://images.unsplash.com/photo-1500316124030-4cffa46f10f0?auto=format&fit=crop&w=1050&q=80&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D" alt="Last quarter">
+            <div class="card-body">
+              <a href="http://money.cnn.com/quote/quote.html?symb=BRKA" class="card-title">CNN Money</a>
+            </div>
+          </div>
+          <div class="card">
+            <img class="card-img-top" src="https://images.unsplash.com/photo-1499631625988-ccd9f8ca1094?auto=format&fit=crop&w=1050&q=80&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D" alt="Message From Us">
+            <div class="card-body">
+              <a href="https://www.bloomberg.com/news/articles/2017-09-27/berkshire-hathaway-s-gen-re-targets-world-beating-india-market" class="card-title">Conquering New Markets</a>
+            </div>
+          </div>
+          <div class="card">
+            <img class="card-img-top" src="https://images.unsplash.com/photo-1495996797143-9fc04e79e304?auto=format&fit=crop&w=1050&q=80&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D" alt="Ethics conduct">
+            <div class="card-body">
+              <a href="https://www.marketwatch.com/story/warren-buffett-is-the-biggest-risk-for-berkshire-hathaway-investors-2017-09-14" class="card-title" >Risks for Investors</a>
+            </div>
+          </div>
         </div>
-        <div id="map"></div>
-        &nbsp;
-        <div id="warnings-panel"></div>
+      </div>
+      <br>
+      <br>
+      <div class="container" id="top3">
+        <div class="card-deck">
+          <div class="card">
+            <img class="card-img-top" src="clock.jpg" alt="Last quarter">
+            <div class="card-body">
+              <a href="http://www.berkshirehathaway.com/news/nov0317.pdf" class="card-title">Last Quarter 2017 Results</a>
+            </div>
+          </div>
+          <div class="card">
+            <img class="card-img-top" src="message.jpg" alt="Message From Us">
+            <div class="card-body">
+              <a href="http://www.berkshirehathaway.com/message.html" class="card-title">A Message From Us</a>
+            </div>
+          </div>
+          <div class="card">
+            <img class="card-img-top" src="ethics.jpg" alt="Ethics conduct">
+            <div class="card-body">
+              <a href="http://www.berkshirehathaway.com/govern/ethics.pdf" class="card-title" >New Ethics and Conduct</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
         <script>
             function initMap() {
                 var markerArray = [];
-
                 // Instantiate a directions service.
                 var directionsService = new google.maps.DirectionsService;
-
                 // Create a map and center it on Berkshire Hathaway HQ.
                 var map = new google.maps.Map(document.getElementById('map'), {
                     zoom: 10,
@@ -152,15 +137,12 @@
                         lng: -95.9654
                     }
                 });
-
                 // Create a renderer for directions and bind it to the map.
                 var directionsDisplay = new google.maps.DirectionsRenderer({
                     map: map
                 });
-
                 // Instantiate an info window to hold step text.
                 var stepDisplay = new google.maps.InfoWindow;
-
                 // Display the route between the initial start and end selections.
                 calculateAndDisplayRoute(
                     directionsDisplay, directionsService, markerArray, stepDisplay, map);
@@ -172,14 +154,12 @@
                 document.getElementById('start').addEventListener('change', onChangeHandler);
                 document.getElementById('end').addEventListener('change', onChangeHandler);
             }
-
             function calculateAndDisplayRoute(directionsDisplay, directionsService,
                 markerArray, stepDisplay, map) {
                 // First, remove any existing markers from the map.
                 for (var i = 0; i < markerArray.length; i++) {
                     markerArray[i].setMap(null);
                 }
-
                 // Retrieve the start and end locations and create a DirectionsRequest using
                 // DRIVING directions.
                 directionsService.route({
@@ -199,7 +179,6 @@
                     }
                 });
             }
-
             function showSteps(directionResult, markerArray, stepDisplay, map) {
                 // For each step, place a marker, and add the text to the marker's infowindow.
                 // Also attach the marker to an array so we can keep track of it and remove it
@@ -213,7 +192,6 @@
                         stepDisplay, marker, myRoute.steps[i].instructions, map);
                 }
             }
-
             function attachInstructionText(stepDisplay, marker, text, map) {
                 google.maps.event.addListener(marker, 'click', function() {
                     // Open an info window when the marker is clicked on, containing the text
@@ -222,14 +200,10 @@
                     stepDisplay.open(map, marker);
                 });
             }
-
         </script>
         <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBY9I6jyCaTXuqxCs7ZHPddfj0lQr0Hmz8&callback=initMap">
-
-
         </script>
     </section>
->>>>>>> 9126abd87d5893bbeff1a55032d528a4769c443a
     <!-- FOOTER -->
     <footer id="footerabout" class="section">
         <div class="d-flex justify-content-center" id="socialMedia">
@@ -244,7 +218,6 @@
     </footer>
     <!-- Add icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
     <!--Scripts-->
     <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
@@ -252,5 +225,4 @@
     <script language="JavaScript" type="text/javascript" src="Berkshire-JS.js"></script>
     <script language="JavaScript" type="text/javascript" src="News.js"></script>
 </body>
-
 </html>
